# Velkavo

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_IOS.txt  Dockerfile  Makefile  README.md
.github/: Dockerfile.arm64
.github/workflows/: build.yml
cmake/: CheckTrezor.cmake  Doxyfile.in  FindCcache.cmake  FindUnbound.cmake  GitVersion.cmake  SetClangTidy.cmake  Version.cmake  test-libusb-version.c  test-protobuf.cpp  test-static-assert.c
contrib/: CMakeLists.txt
contrib/depends/: Makefile  README.md
contrib/epee/: CMakeLists.txt
contrib/guix/: INSTALL.md  README.md
contrib/tor/: velkavo-over-tor.sh
deploy/: BOOTSTRAPPING.md  com.velkavo.velkarod.plist  deploy.sh  genesis_keys.txt  valkarod.service  valkavo.conf  velkarod.service  velkavo.conf
docs/: 01-run-a-node.md  02-how-to-mine.md  03-create-a-wallet.md  04-send-velkavo.md  ANONYMITY_NETWORKS.md  COMPILING_DEBUGGING_TESTING.md  CONTRIBUTING.md  GETTING_STARTED.md  GUIDE.md  LEVIN_PROTOCOL.md  PORTABLE_STORAGE.md  README.i18n.md  RELEASE_CHECKLIST.md  URI_SCHEME.md  ZMQ.md  proxies.md
scripts/: rebrand.py
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  locked_txn.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain-stats-readme.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt  blocks.cpp
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  common_fwd.h  container_helpers.h  data_cache.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.h  hash_combine.h  http_connection.h  i18n.cpp  i18n.h  json_util.h  notify.cpp  notify.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  pruning.cpp  pruning.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  spawn.cpp  spawn.h  stack_trace.cpp  (+11 more)
src/crypto/: CMakeLists.txt  blake256.c  blake256.h  c_threads.h  chacha.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  duration.h  generators.cpp  generators.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-jh.c  (+14 more)
src/crypto/wallet/: CMakeLists.txt  crypto.h  empty.h.in
tests/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h.in  create_test_disks.sh  hash-target.cpp  io.h
translations/: CMakeLists.txt  generate_translations_header.c  velkavo_de.ts  velkavo_el.ts  velkavo_es.ts  velkavo_fr.ts  velkavo_hi.ts  velkavo_is.ts  velkavo_it.ts  velkavo_ja.ts  velkavo_nb_NO.ts  velkavo_ne.ts  velkavo_nl.ts  velkavo_pl.ts  velkavo_prt.ts  velkavo_pt-br.ts  velkavo_pt-pt.ts  velkavo_sk.ts  velkavo_sv.ts  velkavo_tr.ts  velkavo_zu.ts
utils/: doxygen-publish.sh
(+637 files in other folders)
